# doc-checker

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
scripts/: create-admin.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/components/: admin-dashboard.tsx  admin-process-detail.tsx  app-shell.tsx  change-password-form.tsx  conferia-workspace.tsx  development-registry.tsx  extraction-quality-panel.tsx  file-drop-zone.tsx  incomplete-process-detail.tsx  info-tooltip.tsx  login-form.tsx  logout-button.tsx  operations-dashboard.tsx  process-document-list.tsx  process-history.tsx  reconciliation-results-table.tsx  results-table.tsx  status-badge.tsx
src/doc_checker/: __init__.py  checker.py  cli.py
src/domain/: checklists.test.ts  checklists.ts  development.test.ts  development.ts  field-labels.test.ts  field-labels.ts  tenant.ts  validation.ts
src/lib/: auth.ts  extraction-alerts.test.ts  extraction-alerts.ts  process-code.ts  validation-copy.ts
src/types/: pdf-parse.d.ts
supabase/migrations/: 202606250001_admin_control.sql  202607010001_development_registry.sql  202607020001_private_process_documents.sql  202607030001_add_document_formats.sql  202607040001_master_admin_rls.sql  202607050001_optional_review_justification.sql  202607060001_supervised_learning.sql  202607080001_development_unit_areas.sql  202607140001_development_company_identity.sql  202607160001_development_common_area.sql  202607200001_allow_rtf_documents.sql  (+1 more)
tests/: test_checker.py
(+78 files in other folders)
