[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-checker"
version = "0.1.0"
description = "CLI simples para validar arquivos de documentos."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jorge M. Cunha" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
doc-checker = "doc_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
